--- a/xebia-ios/xebia-ios-Info.plist
+++ b/xebia-ios/xebia-ios-Info.plist
@@ -16,7 +16,13 @@
 			<array>
 				<string>Default.png</string>
 				<string>Default@2x.png</string>
+				<string>ios-icon-144.png</string>
+				<string>ios-icon-72.png</string>
+				<string>ios-icon-57.png</string>
+				<string>ios-icon-114.png</string>
 			</array>
+			<key>UIPrerenderedIcon</key>
+			<true/>
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
@@ -39,6 +45,8 @@
 	<string>MainStoryboard</string>
 	<key>UIMainStoryboardFile~ipad</key>
 	<string>MainStoryboard</string>
+	<key>UIPrerenderedIcon</key>
+	<true/>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
