Update of splashscreen and icon resources

--- a/xebia-ios/xebia-ios-Info.plist
+++ b/xebia-ios/xebia-ios-Info.plist
@@ -20,6 +20,15 @@
 				<string>ios-icon-72.png</string>
 				<string>ios-icon-57.png</string>
 				<string>ios-icon-114.png</string>
+				<string>Default-Landscape@2x~ipad.png</string>
+				<string>Default-Landscape~ipad.png</string>
+				<string>Default-Portrait~ipad.png</string>
+				<string>Default-Portrait@2x~ipad.png</string>
+				<string>Default-Portrait@2x~ipad.png</string>
+				<string>Default-Portrait@2x~ipad.png</string>
+				<string>Default-Portrait~ipad.png</string>
+				<string>Default-Portrait~ipad.png</string>
+				<string>Default-Portrait@2x~ipad.png</string>
 			</array>
 			<key>UIPrerenderedIcon</key>
 			<true/>
