Add support for Twitter authenticated request: Give higher X-Rate for twitter requests

--- a/nodejs-xebia-mobile-proxy/application/package.json
+++ b/nodejs-xebia-mobile-proxy/application/package.json
@@ -18,7 +18,8 @@
         "redis": "*",
         "mysql": "*",
         "underscore": "*",
-        "request": "*"
+        "request": "*",
+        "ntwitter": "*"
     },
     "devDependencies": {
     },
