Update of .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ build/*
 !default.mode2v3
 *.perspectivev3
 !default.perspectivev3
-*.xcworkspace
+#*.xcworkspace
 !default.xcworkspace
 xcuserdata
 profile
@@ -38,6 +38,8 @@ devoxx-proxy/node_modules
 tags
 dump
 build_*
+build/*
+test-reports/*
 
 #Redis
 nodejs-xebia-mobile-proxy/application/dump.rdb
