Add support to TestFlight

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,4 @@ env:
   - secure: O3dLGr0GfUICUEqWxroepijtTX9O/mhkAZew0rGFBNEDOVBfIk958TCqt/kZP8GV/XndkX9yuOEAR/1+Liw4aGQ5uzP3nwPD4pVse41uNLjkdae+ldgm0g+des5u94tLKqDSmuIANDJGh0qdeJx8QtcwhpPl2i8tTLKqlgadmvE=
   - secure: cC8bGOtZ0kNbxHKJfqeWpLcgXpG/FbPB0JM9qdGY77HgUeM95YUk3QOfjagE27UBxGyem9JZ/TEaD2wzwmnxYCIAFTxp4XAPAPD/2xjlBh1EV8UTWDwmdzBa4biG5wVRdDUuAIMMZwHMH5VnG775w5wuA0gaTVsXAmMFUxEIheA=
   - secure: VtFd/HsLyDt1x/985MokRmPtdpjE+POhlhxGjSVAAg//VZUz+wz/GvtEcMQOsyI8O06+YAd8B2yRlPJDmcReO/S7E1Fh4ShqAp0oYHzlYHXHfcd/rK7DzzmIyrusrzHKMJo+yaD25+lUbkc196eoTW38SOmAwVCdlFr8jnMy96Q=
+  - secure: UMwI0VoIvH7S+ptTi4sYabz76rqaSOhg2EZNY2FIv55giObZnBQBUEu6ZKS/uw0sdYz82To80+0z5dkZvlMw7k7BW+ZC7MWP6oFE8BZWQ2b4C0Vv3Fi2WPHIovelkhdDVwUVAy+34Jd/E8wVylaZB/wJXdSF8XSZvNAVB1loJjA=
