--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,8 @@ script: Scripts/build.sh
 env: 
   global: 
   - APPNAME="xebia-ios"
-  - 'DEVELOPER_NAME="iPhone Developer: Alexis Kinsella (46N4T2UZ32)"'
+  - "DEVELOPER_NAME=\"iPhone Developer: Alexis Kinsella (46N4T2UZ32)\""
   - PROFILE_UUID=PROVISIONING_PROFILE_UUID
-  - secure: O3dLGr0GfUICUEqWxroepijtTX9O/mhkAZew0rGFBNEDOVBfIk958TCqt/kZP8GV/XndkX9yuOEAR/1+Liw4aGQ5uzP3nwPD4pVse41uNLjkdae+ldgm0g+des5u94tLKqDSmuIANDJGh0qdeJx8QtcwhpPl2i8tTLKqlgadmvE=
   - secure: cC8bGOtZ0kNbxHKJfqeWpLcgXpG/FbPB0JM9qdGY77HgUeM95YUk3QOfjagE27UBxGyem9JZ/TEaD2wzwmnxYCIAFTxp4XAPAPD/2xjlBh1EV8UTWDwmdzBa4biG5wVRdDUuAIMMZwHMH5VnG775w5wuA0gaTVsXAmMFUxEIheA=
   - secure: VtFd/HsLyDt1x/985MokRmPtdpjE+POhlhxGjSVAAg//VZUz+wz/GvtEcMQOsyI8O06+YAd8B2yRlPJDmcReO/S7E1Fh4ShqAp0oYHzlYHXHfcd/rK7DzzmIyrusrzHKMJo+yaD25+lUbkc196eoTW38SOmAwVCdlFr8jnMy96Q=
-  - secure: UMwI0VoIvH7S+ptTi4sYabz76rqaSOhg2EZNY2FIv55giObZnBQBUEu6ZKS/uw0sdYz82To80+0z5dkZvlMw7k7BW+ZC7MWP6oFE8BZWQ2b4C0Vv3Fi2WPHIovelkhdDVwUVAy+34Jd/E8wVylaZB/wJXdSF8XSZvNAVB1loJjA=
+  - secure: KgS2HHz8j5782sidA0qADHt0IhLS5heW/8w61VLkgt41C5EtAXChlOr54emfkK7iwlrvIOzJhcdjWo5+5B8/XObkjbK+AmcSBoHsqAWC4XwvbA9uU/zcYJxb/76SVlpcCvnyMbJWBmHN9de2+T4ZzU9hngTOHWw17g4/5H5+t1I=
