--- a/Targets/xebia-ios/xebia-ios-Info.plist
+++ b/Targets/xebia-ios/xebia-ios-Info.plist
@@ -93,7 +93,8 @@
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
 	<key>XBBaseUrl</key>
-	<string>http://xebia-mobile-backend.helyx.org</string>
+    <string>http://dev.xebia.fr:8000</string>
+    <!--<string>http://xebia-mobile-backend.helyx.org</string>-->
 	<key>XBBlogFranceEmail</key>
 	<string>blog-france@xebia.com</string>
 </dict>
