Fix iOS7 UI issues

--- a/Targets/xebia-ios/xebia-ios-Info.plist
+++ b/Targets/xebia-ios/xebia-ios-Info.plist
@@ -92,9 +92,10 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 	<key>XBBaseUrl</key>
-    <!--<string>http://dev.xebia.fr:8000</string>-->
-    <string>http://xebia-mobile-backend.helyx.org</string>
+	<string>http://dev.xebia.fr:8000</string>
 	<key>XBBlogFranceEmail</key>
 	<string>blog-france@xebia.com</string>
 </dict>
