[WIP] Home controller rework

--- a/Targets/xebia-ios/xebia-ios-Info.plist
+++ b/Targets/xebia-ios/xebia-ios-Info.plist
@@ -95,7 +95,7 @@
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 	<key>XBBaseUrl</key>
-	<string>http://dev.xebia.fr:8000</string>
+	<string>http://xebia-mobile-backend.helyx.org</string>
 	<key>XBBlogFranceEmail</key>
 	<string>blog-france@xebia.com</string>
 </dict>
