--- a/Targets/xebia-ios/xebia-ios-Info.plist
+++ b/Targets/xebia-ios/xebia-ios-Info.plist
@@ -94,8 +94,8 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>XBBaseUrl</key>
-	<string>http://dev.xebia.fr:8000</string>
+    <key>XBBaseUrl</key>
+    <string>http://xebia-mobile-backend.helyx.org/api/v1</string>
 	<key>XBBlogFranceEmail</key>
 	<string>blog-france@xebia.com</string>
 </dict>
