--- a/Targets/xebia-ios/xebia-ios-Info.plist
+++ b/Targets/xebia-ios/xebia-ios-Info.plist
@@ -95,7 +95,7 @@
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
     <key>XBBaseUrl</key>
-    <string>http://xebia-mobile-backend.helyx.org/api/v1</string>
+    <string>https://xebia-mobile-backend.helyx.org/api/v1</string>
 	<key>XBBlogFranceEmail</key>
 	<string>blog-france@xebia.com</string>
 </dict>
