--- a/Targets/xebia-ios/xebia-ios-Info.plist
+++ b/Targets/xebia-ios/xebia-ios-Info.plist
@@ -46,6 +46,21 @@
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>CFBundleURLIconFile</key>
+			<string>xebia-avatar</string>
+			<key>CFBundleURLName</key>
+			<string>fr.xebia.xebia-ios</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>xebia</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
@@ -87,6 +102,8 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
@@ -94,8 +111,8 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-    <key>XBBaseUrl</key>
-    <string>https://xebia-mobile-backend.helyx.org/api/v1</string>
+	<key>XBBaseUrl</key>
+	<string>https://xebia-mobile-backend.helyx.org/api/v1</string>
 	<key>XBBlogFranceEmail</key>
 	<string>blog-france@xebia.com</string>
 </dict>
