Added licenses. Changed dark theme to light theme, improved eventbrite list view, ...

--- a/Settings.bundle/Licenses.plist
+++ b/Settings.bundle/Licenses.plist
@@ -13,11 +13,203 @@
 
         <dict>
             <key>Title</key>
+            <string>AFHTTPRequestOperationLogger</string>
+            <key>Type</key>
+            <string>PSChildPaneSpecifier</string>
+            <key>File</key>
+            <key>AFHTTPRequestOperationLogger</key>
+        </dict>
+        <dict>
+            <key>Title</key>
             <string>AFNetworking</string>
             <key>Type</key>
             <string>PSChildPaneSpecifier</string>
             <key>File</key>
             <key>AFNetworking</key>
+        </dict>
+        <dict>
+            <key>Title</key>
+            <string>Appirater</string>
+            <key>Type</key>
+            <string>PSChildPaneSpecifier</string>
+            <key>File</key>
+            <key>Appirater</key>
+        </dict>
+        <dict>
+            <key>Title</key>
+            <string>DCIntrospect</string>
+            <key>Type</key>
+            <string>PSChildPaneSpecifier</string>
+            <key>File</key>
+            <key>DCIntrospect</key>
+        </dict>
+        <dict>
+            <key>Title</key>
+            <string>DCKeyValueObjectMapping</string>
+            <key>Type</key>
+            <string>PSChildPaneSpecifier</string>
+            <key>File</key>
+            <key>DCKeyValueObjectMapping</key>
+        </dict>
+        <dict>
+            <key>Title</key>
+            <string>DTCoreText</string>
+            <key>Type</key>
+            <string>PSChildPaneSpecifier</string>
+            <key>File</key>
+            <key>DTCoreText</key>
+        </dict>
+        <dict>
+            <key>Title</key>
+            <string>DTFoundation</string>
+            <key>Type</key>
+            <string>PSChildPaneSpecifier</string>
+            <key>File</key>
+            <key>DTFoundation</key>
+        </dict>
+        <dict>
+            <key>Title</key>
+            <string>InAppSettingsKit</string>
+            <key>Type</key>
+            <string>PSChildPaneSpecifier</string>
+            <key>File</key>
+            <key>InAppSettingsKit</key>
+        </dict>
+        <dict>
+            <key>Title</key>
+            <string>JSONKit</string>
+            <key>Type</key>
+            <string>PSChildPaneSpecifier</string>
+            <key>File</key>
+            <key>JSONKit</key>
+        </dict>
+        <dict>
+            <key>Title</key>
+            <string>MBProgressHUD</string>
+            <key>Type</key>
+            <string>PSChildPaneSpecifier</string>
+            <key>File</key>
+            <key>MBProgressHUD</key>
+        </dict>
+        <dict>
+            <key>Title</key>
+            <string>MJPopupViewController</string>
+            <key>Type</key>
+            <string>PSChildPaneSpecifier</string>
+            <key>File</key>
+            <key>MJPopupViewController</key>
+        </dict>
+        <dict>
+            <key>Title</key>
+            <string>NewRelicAgent</string>
+            <key>Type</key>
+            <string>PSChildPaneSpecifier</string>
+            <key>File</key>
+            <key>NewRelicAgent</key>
+        </dict>
+        <dict>
+            <key>Title</key>
+            <string>OCMock</string>
+            <key>Type</key>
+            <string>PSChildPaneSpecifier</string>
+            <key>File</key>
+            <key>OCMock</key>
+        </dict>
+        <dict>
+            <key>Title</key>
+            <string>PKRevealController</string>
+            <key>Type</key>
+            <string>PSChildPaneSpecifier</string>
+            <key>File</key>
+            <key>PKRevealController</key>
+        </dict>
+        <dict>
+            <key>Title</key>
+            <string>Reachability</string>
+            <key>Type</key>
+            <string>PSChildPaneSpecifier</string>
+            <key>File</key>
+            <key>Reachability</key>
+        </dict>
+        <dict>
+            <key>Title</key>
+            <string>SDURLCache</string>
+            <key>Type</key>
+            <string>PSChildPaneSpecifier</string>
+            <key>File</key>
+            <key>SDURLCache</key>
+        </dict>
+        <dict>
+            <key>Title</key>
+            <string>SDWebImage</string>
+            <key>Type</key>
+            <string>PSChildPaneSpecifier</string>
+            <key>File</key>
+            <key>SDWebImage</key>
+        </dict>
+        <dict>
+            <key>Title</key>
+            <string>SecureUDID</string>
+            <key>Type</key>
+            <string>PSChildPaneSpecifier</string>
+            <key>File</key>
+            <key>SecureUDID</key>
+        </dict>
+        <dict>
+            <key>Title</key>
+            <string>SenTestingKitAsync</string>
+            <key>Type</key>
+            <string>PSChildPaneSpecifier</string>
+            <key>File</key>
+            <key>SenTestingKitAsync</key>
+        </dict>
+        <dict>
+            <key>Title</key>
+            <string>ShareKit</string>
+            <key>Type</key>
+            <string>PSChildPaneSpecifier</string>
+            <key>File</key>
+            <key>ShareKit</key>
+        </dict>
+        <dict>
+            <key>Title</key>
+            <string>SVPullToRefresh</string>
+            <key>Type</key>
+            <string>PSChildPaneSpecifier</string>
+            <key>File</key>
+            <key>SVPullToRefresh</key>
+        </dict>
+        <dict>
+            <key>Title</key>
+            <string>TestFlightSDK</string>
+            <key>Type</key>
+            <string>PSChildPaneSpecifier</string>
+            <key>File</key>
+            <key>TestFlightSDK</key>
+        </dict>
+        <dict>
+            <key>Title</key>
+            <string>TTTAttributedLabel</string>
+            <key>Type</key>
+            <string>PSChildPaneSpecifier</string>
+            <key>File</key>
+            <key>TTTAttributedLabel</key>
+        </dict>
+        <dict>
+            <key>Title</key>
+            <string>Underscorem</string>
+            <key>Type</key>
+            <string>PSChildPaneSpecifier</string>
+            <key>File</key>
+            <key>Underscorem</key>
+        </dict>
+        <dict>
+            <key>Title</key>
+            <string>ZXingObjC</string>
+            <key>Type</key>
+            <string>PSChildPaneSpecifier</string>
+            <key>File</key>
+            <key>ZXingObjC</key>
         </dict>
     </array>
 	<key>StringsTable</key>
