--- a/Settings.bundle/DCIntrospect.plist
+++ b/Settings.bundle/DCIntrospect.plist
@@ -6,7 +6,7 @@
 	<array>
         <dict>
             <key>Title</key>
-            <string>SecureUDID</string>
+            <string>DCIntrospect</string>
             <key>FooterText</key>
             <string>
 The MIT License (MIT)
@@ -36,9 +36,9 @@ THE SOFTWARE.
         </dict>
         <dict>
             <key>DefaultValue</key>
-            <string>1.1</string>
+            <string>0.0.2</string>
             <key>Key</key>
-            <string>SecureUDIDVersion</string>
+            <string>DCIntrospectVersion</string>
             <key>Title</key>
             <string>Version</string>
             <key>Type</key>
@@ -47,6 +47,6 @@ THE SOFTWARE.
 
     </array>
 	<key>StringsTable</key>
-	<string>SecureUDID</string>
+	<string>DCIntrospect</string>
 </dict>
 </plist>
