--- a/Settings.bundle/SDWebImage.plist
+++ b/Settings.bundle/SDWebImage.plist
@@ -9,7 +9,7 @@
             <string>SDWebImage</string>
             <key>FooterText</key>
             <string>
-Copyright (c) 2009 Olivier Poitrey <rs@dailymotion.com>
+Copyright (c) 2009 Olivier Poitrey rs@dailymotion.com
  
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
