--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: objective-c
+rvm:
+- 1.9.3
 gemfile: Gemfile
 before_script: 
 - Scripts/before.sh
@@ -19,3 +21,6 @@ env:
   - secure: I7ORmBOoXN6iOy94VTeGU9/Duw+3/x2W4+z9HXZ/JBR7ZCP+YrNzLIn2/5LteZEKoWZMHmVrvHV1zadcOnCLJIETTEX1JC6KkmeFDYn1kq33BnHZx4wL+1nADH0kkYKwGKbKEoQiVpAeM3cEEbmru4Euw7dJdrgrR+j6e7KI6XI=
   - secure: AKohm7ovaPAkQ21iPe9eIChvrLKcFt1DdAfyzjpe9Pb8nudDsMOzI85QHTd4FWALA/YZ+VMQgPo3AjQy4BBMzx6nRIkA2lwldqDSaLAmcR9B9W91t/RghZs02SBxSPUp5lPkf4XkCEEsXiTPKLL/96nOnDPAx0nTL9A6LzxESLo=
   - secure: KUeVQN5BWMmDGX5HvxREMMbyz0+IjXbonCHN3VRADKE88Mq9wPS07YKqJzQ8D31GSUHFNYbmu5/WQXqB0LFg522JSJ3SWHvARWqsxrP3wpkDVcvrxtj3AvWgG+S0NZlsCCKsWrIq/M9nQg7UtF2tgJw3IEZtQuCKK6hSTSxuF3A=
+notifications:
+  recipients:
+    - akinsella@xebia.fr
