Add of About infos section in settings

--- a/Settings.bundle/Root.plist
+++ b/Settings.bundle/Root.plist
@@ -29,6 +29,14 @@
         </dict>
         <dict>
             <key>Title</key>
+            <string>A propos</string>
+            <key>Type</key>
+            <string>PSChildPaneSpecifier</string>
+            <key>File</key>
+            <key>About</key>
+        </dict>
+        <dict>
+            <key>Title</key>
             <string>Mentions Légales</string>
             <key>Type</key>
             <string>PSChildPaneSpecifier</string>
