--- a/Xebia.xcodeproj/xcshareddata/xcschemes/XebiaTests.xcscheme
+++ b/Xebia.xcodeproj/xcshareddata/xcschemes/XebiaTests.xcscheme
@@ -14,9 +14,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "54C2DF0515BDFAFC00CABB12"
-               BuildableName = "xebia-iosTests.octest"
-               BlueprintName = "xebia-iosTests"
-               ReferencedContainer = "container:xebia-ios.xcodeproj">
+               BuildableName = "XebiaTests.octest"
+               BlueprintName = "XebiaTests"
+               ReferencedContainer = "container:Xebia.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -32,9 +32,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "54C2DF0515BDFAFC00CABB12"
-               BuildableName = "xebia-iosTests.octest"
-               BlueprintName = "xebia-iosTests"
-               ReferencedContainer = "container:xebia-ios.xcodeproj">
+               BuildableName = "XebiaTests.octest"
+               BlueprintName = "XebiaTests"
+               ReferencedContainer = "container:Xebia.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
