--- a/Settings.bundle/About.plist
+++ b/Settings.bundle/About.plist
@@ -6,7 +6,7 @@
 	<array>
         <dict>
             <key>Title</key>
-            <string>Contributeurs</string>
+            <string>Contributors</string>
             <key>Type</key>
             <string>PSGroupSpecifier</string>
         </dict>
@@ -35,7 +35,7 @@
             <key>Key</key>
             <string>phone</string>
             <key>Title</key>
-            <string>Téléphone</string>
+            <string>Phone</string>
             <key>Type</key>
             <string>PSTitleValueSpecifier</string>
         </dict>
@@ -57,7 +57,7 @@
             <key>Key</key>
             <string>address</string>
             <key>Title</key>
-            <string>Adresse</string>
+            <string>Address</string>
             <key>Type</key>
             <string>PSTitleValueSpecifier</string>
         </dict>
