Debugging travis-ci build script

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,9 @@ language: objective-c
 #- 1.9.3
 #gemfile: Gemfile
 before_script:
-- export LC_ALL="en_US.UTF-8"
-- export PROFILE_UUID=38CF6B6F-CFC0-4A4B-9125-9992227AF0C6
-- echo "PROFILE_UUID: $PROFILE_UUID"
-- echo "ENCRYPTION_SECRET: $ENCRYPTION_SECRET"
-- openssl aes-256-cbc -k "$ENCRYPTION_SECRET" -in Scripts/Profiles/$PROFILE_UUID.mobileprovision.enc -d -a -out Scripts/Profiles/$PROFILE_UUID.mobileprovision
-- openssl aes-256-cbc -k "$ENCRYPTION_SECRET" -in Scripts/Certs/dev.cer.enc -d -a -out Scripts/Certs/dev.cer
-- openssl aes-256-cbc -k "$ENCRYPTION_SECRET" -in Scripts/Certs/dev.p12.enc -d -a -out Scripts/Certs/dev.p12
+- openssl aes-256-cbc -k "$ENCRYPTION_SECRET" -in "Scripts/Profiles/$PROFILE_UUID.mobileprovision.enc" -d -a -out "Scripts/Profiles/$PROFILE_UUID.mobileprovision"
+- openssl aes-256-cbc -k "$ENCRYPTION_SECRET" -in "Scripts/Certs/dev.cer.enc" -d -a -out "Scripts/Certs/dev.cer"
+- openssl aes-256-cbc -k "$ENCRYPTION_SECRET" -in "Scripts/Certs/dev.p12.enc" -d -a -out "Scripts/Certs/dev.p12"
 - Scripts/before.sh
 - Scripts/add-key.sh
 - sudo easy_install cpp-coveralls
@@ -22,6 +18,7 @@ after_success:
 script: Scripts/build.sh
 env: 
   global: 
+  - LC_ALL="en_US.UTF-8"
   - APPNAME="xebia-ios"
   - "DEVELOPER_NAME=\"iPhone Developer: Alexis Kinsella (46N4T2UZ32)\""
   - PROFILE_UUID=38CF6B6F-CFC0-4A4B-9125-9992227AF0C6
