Reverted changes on ruby and gemfile in .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: objective-c
+rvm: 
+ - 1.9.3
+gemfile: Gemfile
 before_script: 
 - openssl aes-256-cbc -k "$ENCRYPTION_SECRET" -in "Scripts/Profiles/$PROFILE_UUID.mobileprovision.enc" -d -a -out "Scripts/Profiles/$PROFILE_UUID.mobileprovision"
 - openssl aes-256-cbc -k "$ENCRYPTION_SECRET" -in "Scripts/Certs/dev.cer.enc" -d -a -out "Scripts/Certs/dev.cer"
