--- a/Resources/Settings.bundle/AFNetworkActivityLogger.plist
+++ b/Resources/Settings.bundle/AFNetworkActivityLogger.plist
@@ -6,7 +6,7 @@
 	<array>
         <dict>
             <key>Title</key>
-            <string>AFHTTPRequestOperationLogger</string>
+            <string>AFNetworkActivityLogger</string>
             <key>FooterText</key>
             <string>
 Copyright (c) 2011 AFNetworking (http://afnetworking.com/)
@@ -34,9 +34,9 @@ THE SOFTWARE.
         </dict>
         <dict>
             <key>DefaultValue</key>
-            <string>1.0.0</string>
+            <string>2.0.1</string>
             <key>Key</key>
-            <string>AFHTTPRequestOperationLoggerVersion</string>
+            <string>AFNetworkActivityLoggerVersion</string>
             <key>Title</key>
             <string>Version</string>
             <key>Type</key>
@@ -45,6 +45,6 @@ THE SOFTWARE.
 
     </array>
 	<key>StringsTable</key>
-	<string>AFHTTPRequestOperationLogger</string>
+	<string>AFNetworkActivityLogger</string>
 </dict>
 </plist>
