--- a/Targets/Xebia/Xebia-Info.plist
+++ b/Targets/Xebia/Xebia-Info.plist
@@ -90,7 +90,7 @@
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 	<key>XBBaseUrl</key>
-	<string>https://xebia-mobile-backend.helyx.org/api/v1</string>
+	<string>http://backend.mobile.xebia.io/api/v1</string>
 	<key>XBBlogFranceEmail</key>
 	<string>blog-france@xebia.com</string>
 </dict>
