Added Empty view. Updated some library versions

--- a/Resources/Settings.bundle/Licenses.plist
+++ b/Resources/Settings.bundle/Licenses.plist
@@ -109,6 +109,14 @@
         </dict>
         <dict>
             <key>Title</key>
+            <string>NXEmptyView</string>
+            <key>Type</key>
+            <string>PSChildPaneSpecifier</string>
+            <key>File</key>
+            <key>NXEmptyView</key>
+        </dict>
+        <dict>
+            <key>Title</key>
             <string>OCMock</string>
             <key>Type</key>
             <string>PSChildPaneSpecifier</string>
