Fixed GAI typo in XBAppDelegate

--- a/Xebia.xcworkspace/xcshareddata/xcschemes/Xebia.xcscheme
+++ b/Xebia.xcworkspace/xcshareddata/xcschemes/Xebia.xcscheme
@@ -106,6 +106,7 @@
    </AnalyzeAction>
    <ArchiveAction
       buildConfiguration = "Release"
+      customArchiveName = "Xebia"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
