--- a/Xebia.xcworkspace/xcshareddata/xcschemes/Xebia.xcscheme
+++ b/Xebia.xcworkspace/xcshareddata/xcschemes/Xebia.xcscheme
@@ -83,6 +83,11 @@
          </CommandLineArgument>
       </CommandLineArguments>
       <AdditionalOptions>
+         <AdditionalOption
+            key = "NSZombieEnabled"
+            value = "YES"
+            isEnabled = "YES">
+         </AdditionalOption>
       </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
